--- a/quad.cabal
+++ b/quad.cabal
@@ -11,11 +11,16 @@ common language
     default-language: Haskell2010
     ghc-options:
         -Wall
-        -- -Wno-name-shadowing
+        -Wcompat
+        -Widentities
+        -Wincomplete-record-updates
+        -Wincomplete-uni-patterns
+        -Wpartial-fields
+        -Wredundant-constraints
 
 common dependencies
     build-depends:   
-        base ^>=4.18.2.1,
+        base,
         rio,
         yaml
 
@@ -31,6 +36,7 @@ common extensions
         LambdaCase
         NamedFieldPuns
         NoFieldSelectors
+        NoImplicitPrelude
         OverloadedRecordDot
         OverloadedStrings
         StrictData
@@ -42,16 +48,25 @@ library
         extensions
 
     exposed-modules: 
+        Agent,
         Core,
         Docker,
+        JobHandler,
+        JobHandler.Memory,
         Runner,
+        Server,
         Socket
 
     build-depends:   
         aeson,
+        hslogger,
         http-client,
         http-conduit,
+        http-types,
         network,
+        scotty,
+        serialise,
+        stm,
         time
 
     hs-source-dirs: 
@@ -88,6 +103,7 @@ test-suite quad-test
         Main.hs
 
     build-depends:
+        async,
         hspec,
         quad,
         typed-process
